// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App from cozy-scripts with VueJS 2 should handle correctly the config browser:development 1`] = `
Array [
  Object {
    "bail": true,
    "devtool": "#source-map",
    "entry": Object {
      "app": Array [
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-polyfill/lib/index.js",
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/utils/reactExposer.js",
        ".tmp_test/test-app-vue/src/targets/browser/index.js",
      ],
    },
    "externals": Array [
      "cozy",
    ],
    "mode": "development",
    "module": Object {
      "noParse": Array [
        Object {},
      ],
      "rules": Array [
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-loader/lib/index.js",
          "options": Object {
            "cacheDirectory": "node_modules/.cache/babel-loader/js",
            "presets": Array [
              Array [
                "cozy-app",
                Object {
                  "react": false,
                },
              ],
            ],
          },
          "test": Object {},
        },
        Object {
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "ident": "postcss",
                "sourceMap": true,
              },
            },
          ],
        },
        Object {
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/vue-loader/lib/index.js",
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/vue",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/react",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/stylus-loader/index.js",
              "options": Object {
                "use": Array [
                  null,
                ],
              },
            },
          ],
        },
        Object {
          "include": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/svg-sprite-loader/lib/loader.js",
          "options": Object {
            "symbolId": "[name]_[hash]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
            "outputPath": "img/",
            "publicPath": "/img",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/json-loader/index.js",
          "test": Object {},
        },
      ],
    },
    "optimization": Object {
      "splitChunks": Object {
        "cacheGroups": Object {
          "vendors": Object {
            "chunks": "all",
            "name": "vendors",
            "test": Object {},
          },
        },
      },
    },
    "output": Object {
      "filename": "test-app-vue.[name].js",
      "path": ".tmp_test/test-app-vue/build",
      "pathinfo": false,
    },
    "plugins": Array [
      Object {
        "options": Object {
          "chunkFilename": "test-app-vue.[name].css",
          "filename": "test-app-vue.[name].css",
        },
      },
      Object {
        "plugins": Array [
          null,
          null,
          null,
        ],
        "test": Object {},
      },
      Object {
        "options": Object {
          "context": null,
          "hashDigest": "base64",
          "hashDigestLength": 4,
          "hashFunction": "md4",
        },
      },
      Object {},
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {},
      Object {},
      Object {
        "modulesCount": 500,
        "profile": false,
        "showActiveModules": true,
        "showEntries": false,
        "showModules": true,
      },
      Object {
        "options": Object {
          "cache": true,
          "chunks": Array [
            "vendors",
            "app",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": false,
          "meta": Object {},
          "minify": Object {
            "collapseWhitespace": true,
          },
          "showErrors": true,
          "template": ".tmp_test/test-app-vue/src/targets/browser/index.ejs",
          "title": "test-app-vue",
          "xhtml": false,
        },
      },
      Object {
        "options": Object {
          "async": Object {
            "test": Array [],
          },
          "custom": Array [],
          "defaultAttribute": "defer",
          "defer": Object {
            "test": Array [],
          },
          "inline": Object {
            "test": Array [],
          },
          "module": Object {
            "test": Array [],
          },
          "prefetch": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "preload": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "removeInlinedAssets": true,
          "sync": Object {
            "test": Array [],
          },
        },
      },
      Object {
        "definitions": Object {
          "__TARGET__": "\\"browser\\"",
        },
      },
      Object {
        "definitions": Object {
          "__DEVELOPMENT__": true,
          "__STACK_ASSETS__": false,
        },
      },
      Object {},
      Object {
        "options": Object {
          "append": false,
          "assets": Array [
            "cozy-bar.js",
            "cozy-bar.css",
            "cozy-client-js.js",
          ],
          "cssExtensions": Array [
            ".css",
          ],
          "hash": false,
          "jsExtensions": Array [
            ".js",
          ],
          "publicPath": true,
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".json",
        ".css",
        ".vue",
        ".styl",
      ],
      "modules": Array [
        ".tmp_test/test-app-vue/src",
        ".tmp_test/test-app-vue/node_modules",
      ],
      "symlinks": false,
    },
  },
]
`;

exports[`App from cozy-scripts with VueJS 2 should handle correctly the config browser:production 1`] = `
Array [
  Object {
    "bail": true,
    "entry": Object {
      "app": Array [
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-polyfill/lib/index.js",
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/utils/reactExposer.js",
        ".tmp_test/test-app-vue/src/targets/browser/index.js",
      ],
    },
    "externals": Object {
      "cozy-client-js": "cozy",
    },
    "mode": "production",
    "module": Object {
      "noParse": Array [
        Object {},
      ],
      "rules": Array [
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-loader/lib/index.js",
          "options": Object {
            "cacheDirectory": "node_modules/.cache/babel-loader/js",
            "presets": Array [
              Array [
                "cozy-app",
                Object {
                  "react": false,
                },
              ],
            ],
          },
          "test": Object {},
        },
        Object {
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "ident": "postcss",
                "sourceMap": true,
              },
            },
          ],
        },
        Object {
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/vue-loader/lib/index.js",
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/vue",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/react",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/stylus-loader/index.js",
              "options": Object {
                "use": Array [
                  null,
                ],
              },
            },
          ],
        },
        Object {
          "include": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/svg-sprite-loader/lib/loader.js",
          "options": Object {
            "symbolId": "[name]_[hash]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[hash].[ext]",
            "outputPath": "img/",
            "publicPath": "/img",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/json-loader/index.js",
          "test": Object {},
        },
      ],
    },
    "optimization": Object {
      "splitChunks": Object {
        "cacheGroups": Object {
          "vendors": Object {
            "chunks": "all",
            "name": "vendors",
            "test": Object {},
          },
        },
      },
    },
    "output": Object {
      "filename": "test-app-vue.[name].[contenthash].js",
      "path": ".tmp_test/test-app-vue/build",
      "pathinfo": false,
    },
    "plugins": Array [
      Object {
        "options": Object {
          "chunkFilename": "test-app-vue.[name].[contenthash].[id].min.css",
          "filename": "test-app-vue.[name].[contenthash].min.css",
        },
      },
      Object {
        "plugins": Array [
          null,
          null,
          null,
          null,
        ],
        "test": Object {},
      },
      Object {
        "options": Object {
          "context": null,
          "hashDigest": "base64",
          "hashDigestLength": 4,
          "hashFunction": "md4",
        },
      },
      Object {},
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {},
      Object {},
      Object {
        "modulesCount": 500,
        "profile": false,
        "showActiveModules": true,
        "showEntries": false,
        "showModules": true,
      },
      Object {
        "options": Object {
          "cache": true,
          "chunks": Array [
            "vendors",
            "app",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": false,
          "meta": Object {},
          "minify": Object {
            "collapseWhitespace": true,
          },
          "showErrors": true,
          "template": ".tmp_test/test-app-vue/src/targets/browser/index.ejs",
          "title": "test-app-vue",
          "xhtml": false,
        },
      },
      Object {
        "options": Object {
          "async": Object {
            "test": Array [],
          },
          "custom": Array [],
          "defaultAttribute": "defer",
          "defer": Object {
            "test": Array [],
          },
          "inline": Object {
            "test": Array [],
          },
          "module": Object {
            "test": Array [],
          },
          "prefetch": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "preload": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "removeInlinedAssets": true,
          "sync": Object {
            "test": Array [],
          },
        },
      },
      Object {
        "definitions": Object {
          "__TARGET__": "\\"browser\\"",
        },
      },
      Object {},
      Object {
        "definitions": Object {
          "__DEVELOPMENT__": false,
          "__DEVTOOLS__": false,
          "__STACK_ASSETS__": true,
          "process.env.NODE_ENV": "\\"production\\"",
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".json",
        ".css",
        ".vue",
        ".styl",
      ],
      "modules": Array [
        ".tmp_test/test-app-vue/src",
        ".tmp_test/test-app-vue/node_modules",
      ],
      "symlinks": false,
    },
  },
]
`;

exports[`App from cozy-scripts with VueJS 2 should handle correctly the config mobile:development 1`] = `
Array [
  Object {
    "bail": true,
    "devtool": "#source-map",
    "entry": Object {
      "app": Array [
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-polyfill/lib/index.js",
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/utils/reactExposer.js",
        ".tmp_test/test-app-vue/src/targets/mobile/index.js",
      ],
    },
    "externals": Array [
      "cozy",
    ],
    "mode": "development",
    "module": Object {
      "noParse": Array [
        Object {},
      ],
      "rules": Array [
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-loader/lib/index.js",
          "options": Object {
            "cacheDirectory": "node_modules/.cache/babel-loader/js",
            "presets": Array [
              Array [
                "cozy-app",
                Object {
                  "react": false,
                },
              ],
            ],
          },
          "test": Object {},
        },
        Object {
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "ident": "postcss",
                "sourceMap": true,
              },
            },
          ],
        },
        Object {
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/vue-loader/lib/index.js",
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/vue",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/react",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/stylus-loader/index.js",
              "options": Object {
                "use": Array [
                  null,
                ],
              },
            },
          ],
        },
        Object {
          "include": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/svg-sprite-loader/lib/loader.js",
          "options": Object {
            "symbolId": "[name]_[hash]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
            "outputPath": "img/",
            "publicPath": "/img",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/json-loader/index.js",
          "test": Object {},
        },
      ],
    },
    "optimization": Object {
      "splitChunks": Object {
        "cacheGroups": Object {
          "vendors": Object {
            "chunks": "all",
            "name": "vendors",
            "test": Object {},
          },
        },
      },
    },
    "output": Object {
      "path": ".tmp_test/test-app-vue/src/targets/mobile/www",
      "pathinfo": false,
    },
    "plugins": Array [
      Object {
        "options": Object {
          "chunkFilename": "test-app-vue.[name].css",
          "filename": "test-app-vue.[name].css",
        },
      },
      Object {
        "plugins": Array [
          null,
          null,
          null,
        ],
        "test": Object {},
      },
      Object {
        "options": Object {
          "context": null,
          "hashDigest": "base64",
          "hashDigestLength": 4,
          "hashFunction": "md4",
        },
      },
      Object {},
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {},
      Object {},
      Object {
        "modulesCount": 500,
        "profile": false,
        "showActiveModules": true,
        "showEntries": false,
        "showModules": true,
      },
      Object {
        "definitions": Object {
          "__ALLOW_HTTP__": true,
          "__APP_VERSION__": "\\"0.1.0\\"",
          "__TARGET__": "\\"mobile\\"",
        },
      },
      Object {
        "definitions": Object {
          "cozy.bar": "cozy-bar/dist/cozy-bar.mobile.js",
          "cozy.client": "cozy-client-js/dist/cozy-client.js",
        },
      },
      Object {
        "options": Object {
          "cache": true,
          "chunks": Array [
            "vendors",
            "app",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": "head",
          "meta": Object {},
          "minify": Object {
            "collapseWhitespace": true,
          },
          "showErrors": true,
          "template": ".tmp_test/test-app-vue/src/targets/mobile/index.ejs",
          "title": "test-app-vue",
          "xhtml": false,
        },
      },
      Object {
        "options": Object {
          "async": Object {
            "test": Array [],
          },
          "custom": Array [],
          "defaultAttribute": "defer",
          "defer": Object {
            "test": Array [],
          },
          "inline": Object {
            "test": Array [],
          },
          "module": Object {
            "test": Array [],
          },
          "prefetch": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "preload": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "removeInlinedAssets": true,
          "sync": Object {
            "test": Array [],
          },
        },
      },
      Object {
        "definitions": Object {
          "__DEVELOPMENT__": true,
          "__STACK_ASSETS__": false,
        },
      },
      Object {},
      Object {
        "options": Object {
          "append": false,
          "assets": Array [
            "cozy-bar.js",
            "cozy-bar.css",
            "cozy-client-js.js",
          ],
          "cssExtensions": Array [
            ".css",
          ],
          "hash": false,
          "jsExtensions": Array [
            ".js",
          ],
          "publicPath": true,
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".json",
        ".css",
        ".vue",
        ".styl",
      ],
      "modules": Array [
        ".tmp_test/test-app-vue/src",
        ".tmp_test/test-app-vue/node_modules",
      ],
      "symlinks": false,
    },
  },
]
`;

exports[`App from cozy-scripts with VueJS 2 should handle correctly the config mobile:production 1`] = `
Array [
  Object {
    "bail": true,
    "entry": Object {
      "app": Array [
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-polyfill/lib/index.js",
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/utils/reactExposer.js",
        ".tmp_test/test-app-vue/src/targets/mobile/index.js",
      ],
    },
    "mode": "production",
    "module": Object {
      "noParse": Array [
        Object {},
      ],
      "rules": Array [
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-loader/lib/index.js",
          "options": Object {
            "cacheDirectory": "node_modules/.cache/babel-loader/js",
            "presets": Array [
              Array [
                "cozy-app",
                Object {
                  "react": false,
                },
              ],
            ],
          },
          "test": Object {},
        },
        Object {
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "ident": "postcss",
                "sourceMap": true,
              },
            },
          ],
        },
        Object {
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/vue-loader/lib/index.js",
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/vue",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/react",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/stylus-loader/index.js",
              "options": Object {
                "use": Array [
                  null,
                ],
              },
            },
          ],
        },
        Object {
          "include": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/svg-sprite-loader/lib/loader.js",
          "options": Object {
            "symbolId": "[name]_[hash]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[hash].[ext]",
            "outputPath": "img/",
            "publicPath": "/img",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/json-loader/index.js",
          "test": Object {},
        },
      ],
    },
    "optimization": Object {
      "splitChunks": Object {
        "cacheGroups": Object {
          "vendors": Object {
            "chunks": "all",
            "name": "vendors",
            "test": Object {},
          },
        },
      },
    },
    "output": Object {
      "path": ".tmp_test/test-app-vue/src/targets/mobile/www",
      "pathinfo": false,
    },
    "plugins": Array [
      Object {
        "options": Object {
          "chunkFilename": "test-app-vue.[name].[contenthash].[id].min.css",
          "filename": "test-app-vue.[name].[contenthash].min.css",
        },
      },
      Object {
        "plugins": Array [
          null,
          null,
          null,
          null,
        ],
        "test": Object {},
      },
      Object {
        "options": Object {
          "context": null,
          "hashDigest": "base64",
          "hashDigestLength": 4,
          "hashFunction": "md4",
        },
      },
      Object {},
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {},
      Object {},
      Object {
        "modulesCount": 500,
        "profile": false,
        "showActiveModules": true,
        "showEntries": false,
        "showModules": true,
      },
      Object {
        "definitions": Object {
          "__ALLOW_HTTP__": true,
          "__APP_VERSION__": "\\"0.1.0\\"",
          "__TARGET__": "\\"mobile\\"",
        },
      },
      Object {
        "definitions": Object {
          "cozy.bar": "cozy-bar/dist/cozy-bar.mobile.js",
          "cozy.client": "cozy-client-js/dist/cozy-client.js",
        },
      },
      Object {
        "options": Object {
          "cache": true,
          "chunks": Array [
            "vendors",
            "app",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": "head",
          "meta": Object {},
          "minify": Object {
            "collapseWhitespace": true,
          },
          "showErrors": true,
          "template": ".tmp_test/test-app-vue/src/targets/mobile/index.ejs",
          "title": "test-app-vue",
          "xhtml": false,
        },
      },
      Object {
        "options": Object {
          "async": Object {
            "test": Array [],
          },
          "custom": Array [],
          "defaultAttribute": "defer",
          "defer": Object {
            "test": Array [],
          },
          "inline": Object {
            "test": Array [],
          },
          "module": Object {
            "test": Array [],
          },
          "prefetch": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "preload": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "removeInlinedAssets": true,
          "sync": Object {
            "test": Array [],
          },
        },
      },
      Object {},
      Object {
        "definitions": Object {
          "__DEVELOPMENT__": false,
          "__DEVTOOLS__": false,
          "__STACK_ASSETS__": false,
          "process.env.NODE_ENV": "\\"production\\"",
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".json",
        ".css",
        ".vue",
        ".styl",
      ],
      "modules": Array [
        ".tmp_test/test-app-vue/src",
        ".tmp_test/test-app-vue/node_modules",
      ],
      "symlinks": false,
    },
  },
]
`;

exports[`App from cozy-scripts with VueJS 2 should have the correct config browser:development by default 1`] = `
Array [
  Object {
    "bail": true,
    "devtool": "#source-map",
    "entry": Object {
      "app": Array [
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-polyfill/lib/index.js",
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/utils/reactExposer.js",
        ".tmp_test/test-app-vue/src/targets/browser/index.js",
      ],
    },
    "externals": Array [
      "cozy",
    ],
    "mode": "development",
    "module": Object {
      "noParse": Array [
        Object {},
      ],
      "rules": Array [
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-loader/lib/index.js",
          "options": Object {
            "cacheDirectory": "node_modules/.cache/babel-loader/js",
            "presets": Array [
              Array [
                "cozy-app",
                Object {
                  "react": false,
                },
              ],
            ],
          },
          "test": Object {},
        },
        Object {
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "ident": "postcss",
                "sourceMap": true,
              },
            },
          ],
        },
        Object {
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/vue-loader/lib/index.js",
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/vue",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/react",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/stylus-loader/index.js",
              "options": Object {
                "use": Array [
                  null,
                ],
              },
            },
          ],
        },
        Object {
          "include": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/svg-sprite-loader/lib/loader.js",
          "options": Object {
            "symbolId": "[name]_[hash]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
            "outputPath": "img/",
            "publicPath": "/img",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/json-loader/index.js",
          "test": Object {},
        },
      ],
    },
    "optimization": Object {
      "splitChunks": Object {
        "cacheGroups": Object {
          "vendors": Object {
            "chunks": "all",
            "name": "vendors",
            "test": Object {},
          },
        },
      },
    },
    "output": Object {
      "filename": "test-app-vue.[name].js",
      "path": ".tmp_test/test-app-vue/build",
      "pathinfo": false,
    },
    "plugins": Array [
      Object {
        "options": Object {
          "chunkFilename": "test-app-vue.[name].css",
          "filename": "test-app-vue.[name].css",
        },
      },
      Object {
        "plugins": Array [
          null,
          null,
          null,
        ],
        "test": Object {},
      },
      Object {
        "options": Object {
          "context": null,
          "hashDigest": "base64",
          "hashDigestLength": 4,
          "hashFunction": "md4",
        },
      },
      Object {},
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {},
      Object {},
      Object {
        "modulesCount": 500,
        "profile": false,
        "showActiveModules": true,
        "showEntries": false,
        "showModules": true,
      },
      Object {
        "options": Object {
          "cache": true,
          "chunks": Array [
            "vendors",
            "app",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": false,
          "meta": Object {},
          "minify": Object {
            "collapseWhitespace": true,
          },
          "showErrors": true,
          "template": ".tmp_test/test-app-vue/src/targets/browser/index.ejs",
          "title": "test-app-vue",
          "xhtml": false,
        },
      },
      Object {
        "options": Object {
          "async": Object {
            "test": Array [],
          },
          "custom": Array [],
          "defaultAttribute": "defer",
          "defer": Object {
            "test": Array [],
          },
          "inline": Object {
            "test": Array [],
          },
          "module": Object {
            "test": Array [],
          },
          "prefetch": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "preload": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "removeInlinedAssets": true,
          "sync": Object {
            "test": Array [],
          },
        },
      },
      Object {
        "definitions": Object {
          "__TARGET__": "\\"browser\\"",
        },
      },
      Object {
        "definitions": Object {
          "__DEVELOPMENT__": true,
          "__STACK_ASSETS__": false,
        },
      },
      Object {},
      Object {
        "options": Object {
          "append": false,
          "assets": Array [
            "cozy-bar.js",
            "cozy-bar.css",
            "cozy-client-js.js",
          ],
          "cssExtensions": Array [
            ".css",
          ],
          "hash": false,
          "jsExtensions": Array [
            ".js",
          ],
          "publicPath": true,
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".json",
        ".css",
        ".vue",
        ".styl",
      ],
      "modules": Array [
        ".tmp_test/test-app-vue/src",
        ".tmp_test/test-app-vue/node_modules",
      ],
      "symlinks": false,
    },
  },
]
`;

exports[`App from cozy-scripts with VueJS 2 should have the correct config browser:development by default handling --debug mode 1`] = `
Array [
  Object {
    "bail": true,
    "devtool": "#source-map",
    "entry": Object {
      "app": Array [
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-polyfill/lib/index.js",
        ".tmp_test/test-app-vue/node_modules/cozy-scripts/utils/reactExposer.js",
        ".tmp_test/test-app-vue/src/targets/browser/index.js",
      ],
    },
    "externals": Array [
      "cozy",
    ],
    "mode": "development",
    "module": Object {
      "noParse": Array [
        Object {},
      ],
      "rules": Array [
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/babel-loader/lib/index.js",
          "options": Object {
            "cacheDirectory": "node_modules/.cache/babel-loader/js",
            "presets": Array [
              Array [
                "cozy-app",
                Object {
                  "react": false,
                },
              ],
            ],
          },
          "test": Object {},
        },
        Object {
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "ident": "postcss",
                "sourceMap": true,
              },
            },
          ],
        },
        Object {
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/vue-loader/lib/index.js",
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/vue",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "enforce": "pre",
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/eslint-loader/index.js",
          "options": Object {
            "emitWarning": true,
            "extends": Array [
              "cozy-app/react",
            ],
            "fix": false,
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "test": Object {},
          "use": Array [
            ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/mini-css-extract-plugin/dist/loader.js",
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/css-loader/index.js",
              "options": Object {
                "importLoaders": 1,
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/postcss-loader/src/index.js",
              "options": Object {
                "sourceMap": true,
              },
            },
            Object {
              "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/stylus-loader/index.js",
              "options": Object {
                "use": Array [
                  null,
                ],
              },
            },
          ],
        },
        Object {
          "include": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/svg-sprite-loader/lib/loader.js",
          "options": Object {
            "symbolId": "[name]_[hash]",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/file-loader/dist/cjs.js",
          "options": Object {
            "name": "[name].[ext]",
            "outputPath": "img/",
            "publicPath": "/img",
          },
          "test": Object {},
        },
        Object {
          "exclude": Object {},
          "loader": ".tmp_test/test-app-vue/node_modules/cozy-scripts/node_modules/json-loader/index.js",
          "test": Object {},
        },
      ],
    },
    "optimization": Object {
      "splitChunks": Object {
        "cacheGroups": Object {
          "vendors": Object {
            "chunks": "all",
            "name": "vendors",
            "test": Object {},
          },
        },
      },
    },
    "output": Object {
      "filename": "test-app-vue.[name].js",
      "path": ".tmp_test/test-app-vue/build",
      "pathinfo": true,
    },
    "plugins": Array [
      Object {
        "options": Object {
          "chunkFilename": "test-app-vue.[name].css",
          "filename": "test-app-vue.[name].css",
        },
      },
      Object {
        "plugins": Array [
          null,
          null,
          null,
        ],
        "test": Object {},
      },
      Object {
        "options": Object {
          "context": null,
          "hashDigest": "base64",
          "hashDigestLength": 4,
          "hashFunction": "md4",
        },
      },
      Object {},
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {
        "config": Object {
          "plainSprite": false,
          "spriteAttrs": Object {},
        },
        "rules": Object {},
        "svgCompiler": Object {
          "config": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "rules": Object {
            "rules": Array [
              Object {
                "test": Object {},
                "value": "sprite.svg",
              },
            ],
          },
          "symbols": Array [],
        },
      },
      Object {},
      Object {},
      Object {
        "modulesCount": 500,
        "profile": false,
        "showActiveModules": true,
        "showEntries": false,
        "showModules": true,
      },
      Object {
        "options": Object {
          "cache": true,
          "chunks": Array [
            "vendors",
            "app",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": false,
          "meta": Object {},
          "minify": Object {
            "collapseWhitespace": true,
          },
          "showErrors": true,
          "template": ".tmp_test/test-app-vue/src/targets/browser/index.ejs",
          "title": "test-app-vue",
          "xhtml": false,
        },
      },
      Object {
        "options": Object {
          "async": Object {
            "test": Array [],
          },
          "custom": Array [],
          "defaultAttribute": "defer",
          "defer": Object {
            "test": Array [],
          },
          "inline": Object {
            "test": Array [],
          },
          "module": Object {
            "test": Array [],
          },
          "prefetch": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "preload": Object {
            "chunks": "initial",
            "test": Array [],
          },
          "removeInlinedAssets": true,
          "sync": Object {
            "test": Array [],
          },
        },
      },
      Object {
        "definitions": Object {
          "__TARGET__": "\\"browser\\"",
        },
      },
      Object {
        "definitions": Object {
          "__DEVELOPMENT__": true,
          "__STACK_ASSETS__": false,
        },
      },
      Object {},
      Object {
        "options": Object {
          "append": false,
          "assets": Array [
            "cozy-bar.js",
            "cozy-bar.css",
            "cozy-client-js.js",
          ],
          "cssExtensions": Array [
            ".css",
          ],
          "hash": false,
          "jsExtensions": Array [
            ".js",
          ],
          "publicPath": true,
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".json",
        ".css",
        ".vue",
        ".styl",
      ],
      "modules": Array [
        ".tmp_test/test-app-vue/src",
        ".tmp_test/test-app-vue/node_modules",
      ],
      "symlinks": false,
    },
  },
]
`;

exports[`App from cozy-scripts with VueJS 2 should have the correct files outline 1`] = `
Array [
  ".editorconfig",
  ".eslintrc.json",
  ".github/ISSUE_TEMPLATE",
  ".github/PULL_REQUEST_TEMPLATE",
  ".gitignore",
  ".prettierrc",
  ".stylintrc",
  ".transifexrc.tpl",
  ".travis.yml",
  ".tx/config",
  "CONTRIBUTING.md",
  "LICENSE",
  "README.md",
  "babel.config.js",
  "jest.config.js",
  "manifest.webapp",
  "node_modules",
  "package.json",
  "renovate.json",
  "src/assets/icons/icon-bullet-point.svg",
  "src/components/App.vue",
  "src/components/HelloViews/Hello1.vue",
  "src/components/HelloViews/Hello2.vue",
  "src/components/HelloViews/Hello3.vue",
  "src/components/Icon.vue",
  "src/lib/I18n/format.js",
  "src/lib/I18n/index.js",
  "src/lib/I18n/translation.js",
  "src/lib/store.js",
  "src/locales/en.json",
  "src/styles/index.styl",
  "src/styles/nav.css",
  "src/targets/browser/index.ejs",
  "src/targets/browser/index.js",
  "src/targets/intents/.gitkeep",
  "src/targets/mobile/DOCS.md",
  "src/targets/vendor/assets/icon.svg",
  "test/__mocks__/fileMock.js",
  "test/__snapshots__/app.spec.js.snap",
  "test/app.spec.js",
  "test/components/__snapshots__/helloViews.spec.js.snap",
  "test/components/helloViews.spec.js",
  "test/jestLib/setup.js",
  "test/lib/I18n.js",
  "yarn.lock",
]
`;
